--- a/clientside/pages/add.html
+++ b/clientside/pages/add.html
@@ -29,6 +29,13 @@
             <label for="email">Email</label>
             <input type="email" id="email" name="email" required>
 
+            <div class="profile" id="prf">
+                <img src="" class="proimg" id="proimg" alt="">
+            </div>
+
+            <label for="profile">Profile</label>
+            <input type="file" id="profile" name="profile" required>
+
             <div class="buttons">
                 <button >Submit</button>
                 <button type="reset">Reset</button>
