--- a/clientside/index.html
+++ b/clientside/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NOVAVI</title>
-    <link rel="stylesheet" href="./css/style1.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
     <div class="navbar">
@@ -25,7 +25,7 @@
     </div>
 
     <div class="contents" id="contents">
-
+        
     </div>
     <script src="./js/index.js"></script>
 </body>
