--- a/clientside/pages/add.html
+++ b/clientside/pages/add.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Employ Registration</title>
-    <link rel="stylesheet" href="../css/style2.css">
+    <link rel="stylesheet" href="../css/add.css">
 </head>
 <body>
     <div class="container">
@@ -29,9 +29,9 @@
             <label for="email">Email</label>
             <input type="email" id="email" name="email" required>
 
-            <div class="profile" id="prf">
+            <!-- <div class="profile" id="prf">
                 <img src="" class="proimg" id="proimg" alt="">
-            </div>
+            </div> -->
 
             <label for="profile">Profile</label>
             <input type="file" id="profile" name="profile" required>
