--- a/clientside/pages/add.html
+++ b/clientside/pages/add.html
@@ -24,14 +24,14 @@
             <input type="text" id="designation" name="designation" required>
 
             <label for="phone">Phone Number:</label>
-            <input type="tel" id="phone" name="phone" required>
+            <input type="number" id="phone" name="phone" required>
 
             <label for="email">Email</label>
             <input type="email" id="email" name="email" required>
 
-            <!-- <div class="profile" id="prf">
+            <div class="profile" id="prf">
                 <img src="" class="proimg" id="proimg" alt="">
-            </div> -->
+            </div>
 
             <label for="profile">Profile</label>
             <input type="file" id="profile" name="profile" required>
