--- a/clientside/index.html
+++ b/clientside/index.html
@@ -15,7 +15,7 @@
         <div class="right">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="./pages/signin.html">Sign In</a></li>
                 <li><a href="./pages/signup.html">Sign Up</a></li>
             </ul>
             <div class="button1">
