--- a/clientside/pages/signin.html
+++ b/clientside/pages/signin.html
@@ -18,6 +18,7 @@
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" required>
             </div>
+            <p class="redirect"> <a href="./forgetpass.html">Forget Password?</a></p>
             <button type="submit">Sign In</button>
             <p class="redirect">Don't have an account? <a href="./signup.html">Sign up</a></p>
         </form>
